// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lambdas.py 1`] = `
key=lambda variable: variable[0]
max(lis, key=lambda x:int(x))
f = lambda param: some_very_long_variable_name_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
f = lambda some_very_long_param_name_1_aaaaaaaaaa, some_very_long_param_name_2_aaaaaaaaaa, some_very_long_param_name_3_aaaaaaaaaa: True
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key = lambda variable: variable[0]
max(lis, key=lambda x: int(x))
f = lambda param: \\
        some_very_long_variable_name_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
f = lambda \\
        some_very_long_param_name_1_aaaaaaaaaa, \\
        some_very_long_param_name_2_aaaaaaaaaa, \\
        some_very_long_param_name_3_aaaaaaaaaa \\
    : \\
        True

`;

exports[`lambdas.py 2`] = `
key=lambda variable: variable[0]
max(lis, key=lambda x:int(x))
f = lambda param: some_very_long_variable_name_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
f = lambda some_very_long_param_name_1_aaaaaaaaaa, some_very_long_param_name_2_aaaaaaaaaa, some_very_long_param_name_3_aaaaaaaaaa: True
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key = lambda variable: variable[0]
max(lis, key=lambda x: int(x))
f = lambda param: \\
        some_very_long_variable_name_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
f = lambda \\
        some_very_long_param_name_1_aaaaaaaaaa, \\
        some_very_long_param_name_2_aaaaaaaaaa, \\
        some_very_long_param_name_3_aaaaaaaaaa, \\
    : \\
        True

`;

exports[`lambdas.py 3`] = `
key=lambda variable: variable[0]
max(lis, key=lambda x:int(x))
f = lambda param: some_very_long_variable_name_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
f = lambda some_very_long_param_name_1_aaaaaaaaaa, some_very_long_param_name_2_aaaaaaaaaa, some_very_long_param_name_3_aaaaaaaaaa: True
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key = lambda variable: variable[0]
max(lis, key=lambda x: int(x))
f = lambda param: \\
        some_very_long_variable_name_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
f = lambda \\
        some_very_long_param_name_1_aaaaaaaaaa, \\
        some_very_long_param_name_2_aaaaaaaaaa, \\
        some_very_long_param_name_3_aaaaaaaaaa \\
    : \\
        True

`;
